--- a/AcceleratorSample/Podfile
+++ b/AcceleratorSample/Podfile
@@ -1,8 +1,8 @@
 platform :ios, '9.0'
 
-target 'AcceleratorSample' do
+target 'AcceleratorSampleApp' do
 pod 'OTTextChatAccelerator', '1.0.2'
-pod 'OTAnnotationKit', '2.0.0-beta2'
+pod 'OTAnnotationKit', '2.0.0-beta3'
 pod 'SVProgressHUD'
 pod 'OTAcceleratorCore', '1.0.3'
 pod 'OpenTok', '2.10.2'
