--- a/AcceleratorSample/Podfile
+++ b/AcceleratorSample/Podfile
@@ -4,6 +4,6 @@ target 'AcceleratorSampleApp' do
 pod 'OTTextChatAccelerator', '1.0.2'
 pod 'OTAnnotationKit', '2.0.0-beta3'
 pod 'SVProgressHUD'
-pod 'OTAcceleratorCore', '1.0.3'
+pod 'OTAcceleratorCore', ‘1.0.5’
 pod 'OpenTok', '2.10.2'
 end
