--- a/AcceleratorSample/Podfile
+++ b/AcceleratorSample/Podfile
@@ -2,8 +2,7 @@ platform :ios, '9.0'
 
 target 'AcceleratorSampleApp' do
 pod 'OTTextChatAccelerator', '1.0.2'
-pod 'OTAnnotationKit', '2.0.0-beta3'
+pod 'OTAnnotationAccelerator', '= 1.0.0-beta2'
 pod 'SVProgressHUD'
-pod 'OTAcceleratorCore', ‘1.0.5’
-pod 'OpenTok', '2.10.2'
+pod 'OTAcceleratorCore', '= 1.1.3'
 end
