--- a/AcceleratorSampleApp-Swift/Podfile
+++ b/AcceleratorSampleApp-Swift/Podfile
@@ -1,8 +1,8 @@
-platform :ios, '10.0'
+platform :ios, '11.0'
 
 target 'AcceleratorSampleApp-Swift' do
-pod 'OTTextChatAccelerator', '1.0.4'
-pod 'OTAnnotationAccelerator', '= 1.0.0-beta3'
-pod 'SVProgressHUD', '=2.2.1'
-pod 'OTAcceleratorCore', '= 1.1.9'
+pod 'OTTextChatAccelerator', '~> 2.0.1'
+pod 'OTAnnotationAccelerator', '~> 1.0.0-beta4'
+pod 'SVProgressHUD', '~> 2.2.5'
+pod 'OTAcceleratorCore', '~> 2.0.1'
 end
